# data-bitcode

./: .gitignore  README.md  cabal.project  data-bitcode.cabal  data-bitcode.nix  package.yaml  stack.yaml  writer.html
bench/data/: HelloWorld.mod  HelloWorld2.mod
bench/src/: Bench.hs
prof/src/: Prof.hs
src/Data/: BitCode.hs
src/Data/BitCode/: AbbrevOpEncoding.hs  Abbreviation.hs  Reader.hs  Writer.hs
src/Data/BitCode/Codes/: BlockInfo.hs
src/Data/BitCode/IDs/: FixedAbbrev.hs  StandardBlock.hs
src/Data/BitCode/Reader/: Combinators.hs  FromBits.hs  Monad.hs
src/Data/BitCode/Writer/: Combinators.hs  Monad.hs  ToBits.hs
test/: BitcodeSpec.hs
