name:                data-bitcode
version:             0.1.0.0
synopsis:            bitcode reader and writer
homepage:            https://github.com/angerman/data-bitcode#readme
bug-reports:         https://github.com/angerman/data-bitcode/issues
author:              Moritz Angermann <moritz@lichtzwerge.de>
maintainer:          Moritz Angermann <moritz@lichtzwerge.de>
copyright:           lichtzwerge GmbH
license:             BSD3
license-file:        LICENSE
category:            Code Generation
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/angerman/data-bitcode

library
  hs-source-dirs:
      src
  exposed-modules:
      Data.BitCode
      Data.BitCode.Abbreviation
      Data.BitCode.AbbrevOpEncoding
      Data.BitCode.Codes.BlockInfo
      Data.BitCode.IDs.FixedAbbrev
      Data.BitCode.IDs.StandardBlock
      Data.BitCode.Reader
      Data.BitCode.Reader.Combinators
      Data.BitCode.Reader.FromBits
      Data.BitCode.Reader.Monad
      Data.BitCode.Writer
      Data.BitCode.Writer.Monad
      Data.BitCode.Writer.ToBits
  build-depends:
      base
    , pretty
    , bytestring
    , binary
    , containers
    , transformers
  default-language: Haskell2010

test-suite spec
  main-is:           Tasty.hs
  hs-source-dirs:    test
  other-modules:     BitcodeSpec
  ghc-options:       -Wall -threaded
  type:              exitcode-stdio-1.0
  build-depends:       base
                     , tasty
                     , tasty-discover
                     , tasty-hspec
                     , tasty-quickcheck
                     , process
                     , filepath
                     , data-bitcode
                     -- , data-bitcode-llvm
                    -- , data-bitcode-llvm
  default-language:  Haskell2010


benchmark writer
  type: exitcode-stdio-1.0
  main-is: Prof.hs
  hs-source-dirs:
      prof/src
  ghc-options: -main-is Prof
  build-depends:
      base >= 4.10 && < 5
    , binary              
    , data-bitcode
  other-modules:
  default-language: Haskell2010

benchmark bitcode
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  hs-source-dirs:
      bench/src
  ghc-options: -main-is Bench
  build-depends:
      base >= 4.10 && < 5
    , pretty >= 1.1
    , bytestring >= 0.10
    , binary >= 0.8
    , containers >= 0.5
    , criterion
    , data-bitcode
  other-modules:
  default-language: Haskell2010
